processed/gerrit/txt_full/35296.txt
Change:     35296
Subject:    LU-4423 ptlrpc: remove inline on non-inlined functions.
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/35296
Change-Id:  I0824d362f05e7397dd828f06464ad5aa156673d4
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      James Simmons
Created:    2019-06-23 13:48:32.000000000
Updated:    2019-07-12 05:22:28.000000000
Patch Set:  5
Insertions: +26
Deletions:  -25
Comments:   2 (0 unresolved)

--- Labels ---
  Code-Review: Neil Brown: +1; Sebastien Buisson: +1; Andreas Dilger: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Jenkins, Oleg Drokin, Andreas Dilger, Sebastien Buisson, Neil Brown, Petros Koutoupis, Shaun Tancheff

--- Commit Message ---
LU-4423 ptlrpc: remove inline on non-inlined functions.

These three functions are never inlined.  The only time they
are used, their address is taken, and this forces them to
be compiled as stand-alone functions.  So having the "inline"
declaration is misleading.

Move the functions to the place where their address is used, and
remove the 'inline' tag.

Test-Parameters: trivial

Change-Id: I0824d362f05e7397dd828f06464ad5aa156673d4
Signed-off-by: NeilBrown <neilb@suse.com>
Reviewed-on: https://review.whamcloud.com/35296
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (James Simmons, 2019-06-23 13:48:32.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2019-06-23 13:49:42.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (James Simmons, 2019-06-23 13:53:01.000000000) ---
Uploaded patch set 2.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-06-23 13:53:42.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  /home/green/git/lustre-release/lustre/ptlrpc/client.c: In function ‘ptlrpc_release_bulk_page_pin’:
 /home/green/git/lustre-release/lustre/ptlrpc/client.c:66:32: error: ‘lnet_kiov_t’ has no member named ‘bv_page’
    put_page(BD_GET_KIOV(desc, i).bv_page);
                                 ^
 /home/green/git/lustre-release/lustre/ptlrpc/client.c: At top level:
 cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]
 cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Lustre Gerrit Janitor, 2019-06-23 13:54:13.000000000) ---
Patch Set 1:

(1 comment)

Compile failed
 Job output URL: http://testing.linuxhacker.ru:3333/lustre-reports/645/results.html

--- Message (wc-checkpatch, 2019-06-23 13:54:53.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (James Simmons, 2019-06-23 13:56:26.000000000) ---
Uploaded patch set 3.

--- Message (wc-checkpatch, 2019-06-23 14:00:03.000000000) ---
Patch Set 3:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2019-06-23 14:00:47.000000000) ---
Patch Set 3:

(1 comment)

Compile failed
 Job output URL: http://testing.linuxhacker.ru:3333/lustre-reports/647/results.html

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-06-23 14:07:11.000000000) ---
Patch Set 3:

Cannot build patch due to 14, messages:

  /home/green/git/lustre-release/lustre/ptlrpc/client.c: In function ‘ptlrpc_release_bulk_page_pin’:
 /home/green/git/lustre-release/lustre/ptlrpc/client.c:66:32: error: ‘lnet_kiov_t’ has no member named ‘bv_page’
    put_page(BD_GET_KIOV(desc, i).bv_page);
                                 ^
 /home/green/git/lustre-release/lustre/ptlrpc/client.c: At top level:
 cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]
 cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Jenkins, 2019-06-23 14:22:39.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/6241/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/65981/ : FAILURE

--- Message (Jenkins, 2019-06-23 14:30:41.000000000) ---
Patch Set 3: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/6243/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/65983/ : FAILURE

--- Message (Jenkins, 2019-06-23 14:31:29.000000000) ---
Patch Set 2: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/6242/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/65982/ : FAILURE

--- Message (James Simmons, 2019-07-01 17:10:56.000000000) ---
Uploaded patch set 4.

--- Message (wc-checkpatch, 2019-07-01 17:12:15.000000000) ---
Patch Set 4:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-07-01 17:15:53.000000000) ---
Patch Set 4:

Code-wise looks good to me.

--- Message (Lustre Gerrit Janitor, 2019-07-01 17:23:29.000000000) ---
Patch Set 4:

Builds for x86_64 centos7,rhel8.0 successful
Job output URL: http://testing.linuxhacker.ru:3333/lustre-reports/903/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs

--- Message (Lustre Gerrit Janitor, 2019-07-01 17:30:49.000000000) ---
Patch Set 4:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs 

(centos7)All results and logs: http://testing.linuxhacker.ru:3333/lustre-reports/903/results.html
Commencing standard testing: 
- conf-sanity@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity@zfs conf-sanity-slow@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (jenkins, 2019-07-01 17:40:28.000000000) ---
Patch Set 4: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/6492/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/66233/ : SUCCESS

--- Message (Autotest, 2019-07-01 17:40:47.000000000) ---
Patch Set 4:

Onyx Autotest started enforced review-ldiskfs-dne session for build 66233.

--- Message (Lustre Gerrit Janitor, 2019-07-01 20:52:30.000000000) ---
Patch Set 4:

Even though "Test-Parameters: trivial" was detected, this deeply suspicious bot still run some testing

Testing has completed with errors!

> conf-sanity-slow@ldiskfs+DNE Failure(7463s)
- 69(create file after reformat) 111(add mds1 failed with new params) 
> conf-sanity-slow@zfs Failure(3596s)
- 69(OST replacement created too many inodes; 98309) 
> replay-dual@ldiskfs+DNE Timeout(588s)
> replay-single@ldiskfs+DNE Failure(8317s)
- 110f(1 != 2 after recovery) 
> sanity-lfsck@zfs Failure(1073s)
- 23b((9) Fail to repair dangling name entry: 0) 

Succeeded:
- conf-sanity@ldiskfs+DNE conf-sanity@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

(centos7)All results and logs: http://testing.linuxhacker.ru:3333/lustre-reports/903/results.html

--- Message (Maloo, 2019-07-01 21:17:27.000000000) ---
Patch Set 4: Verified+1

Passed enforced test review-ldiskfs-dne on CentOS 7.0/x86_64 uploaded by Onyx Autotest from onyx-37vm5: https://testing.whamcloud.com/test_sessions/33326072-b603-491e-a3bf-7f86e7bc8332 ran 4 tests.

--- Message (Andreas Dilger, 2019-07-03 05:30:02.000000000) ---
Patch Set 4: Code-Review+1

--- Message (Neil Brown, 2019-07-08 02:15:54.000000000) ---
Patch Set 4: Code-Review+1

--- Message (Sebastien Buisson, 2019-07-08 07:27:29.000000000) ---
Patch Set 4: Code-Review+1

--- Message (Oleg Drokin, 2019-07-12 05:09:49.000000000) ---
Patch Set 4: Code-Review+2

--- Message (unknown, 2019-07-12 05:22:28.000000000) ---
Change has been successfully cherry-picked as 61295974fe1eb20b7e5525cf553fa2bfc43f3ba6 by Oleg Drokin
